--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server": "^2.22.2",
+    "apollo-server-express": "^2.22.2",
+    "express": "^4.17.1",
     "graphql": "^15.5.0",
+    "graphql-playground-middleware-express": "^1.7.22",
     "nodemon": "^2.0.7"
   }
 }
