--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "graphql": "^15.5.0",
     "graphql-playground-middleware-express": "^1.7.22",
+    "mongodb": "^3.6.5",
     "nodemon": "^2.0.7"
   }
 }
